--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "pestpost",
   "private": true,
   "version": "0.0.1",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@supabase/supabase-js": "^2"
+  }
 }
