--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "crons": [
-    { "path": "/api/cron-orchestrator", "schedule": "*/10 * * * *" }
-  ]
+  "crons": [{
+    "path": "/api/cron",
+    "schedule": "0 10 * * *"
+  }]
 }
