--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "crons": [
-    { "path": "/api/cron-orchestrator", "schedule": "*/10 * * * *" }
+    { "path": "/api/cron", "schedule": "0 */2 * * *" }
   ]
 }
